--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant Menu - Delicious Meals</title>
+    <title>قائمة المطعم - وجبات شهية</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="newPage.css">
@@ -13,17 +13,17 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
         <div class="container">
             <a class="navbar-brand fw-bold" href="#">
-                <i class="fas fa-utensils me-2 text-primary"></i>
-                <span id="site-title">Taste Heaven</span>
+                <i class="fas fa-utensils ms-2 text-primary"></i>
+                <span id="site-title">جنة الطعم</span>
             </a>
             <div class="d-flex align-items-center">
-                <button class="btn btn-outline-primary position-relative me-3" onclick="toggleCart()">
+                <button class="btn btn-outline-primary position-relative ms-3" onclick="toggleCart()">
                     <i class="fas fa-shopping-cart"></i>
-                    Cart
+                    السلة
                     <span id="cart-count" class="badge bg-danger position-absolute top-0 start-100 translate-middle" style="display: none;">0</span>
                 </button>
-                <a href="#" class="btn btn-outline-success me-3" id="whatsappNavButton" title="Order on WhatsApp">
-                    <i class="fab fa-whatsapp me-1"></i> WhatsApp
+                <a href="#" class="btn btn-outline-success ms-3" id="whatsappNavButton" title="اطلب عبر الواتساب">
+                    <i class="fab fa-whatsapp ms-1"></i> واتساب
                 </a>
             </div>
         </div>
@@ -35,13 +35,13 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-8">
-                    <h1 class="display-3 fw-bolder mb-4">Welcome to Taste Heaven</h1>
-                    <p class="lead fs-4 mb-5 opacity-75">Discover our exquisite menu featuring the finest main meals, premium smoking dishes, and delightful desserts.</p>
+                    <h1 class="display-3 fw-bolder mb-4">أهلاً بكم في جنة الطعم</h1>
+                    <p class="lead fs-4 mb-5 opacity-75">اكتشفوا قائمة طعامنا المميزة التي تضم أشهى الوجبات الرئيسية والأطباق المدخنة والحلويات اللذيذة.</p>
                 </div>
             </div>
             <div class="sale-badge-container text-center mt-4">
                  <div class="sale-badge d-inline-block">
-                    <i class="fas fa-fire me-2"></i> Chef's Special: Order 3 Get 1 Free!
+                    <i class="fas fa-fire ms-2"></i> عرض الشيف المميز: اطلب 3 واحصل على 1 مجاناً!
                 </div>
             </div>
         </div>
@@ -54,16 +54,16 @@
                 <div class="col-12">
                     <div class="d-flex justify-content-center flex-wrap gap-3">
                         <button class="btn btn-outline-primary category-btn active" data-category="menu">
-                            <i class="fas fa-book-open me-2"></i>Menu
+                            <i class="fas fa-book-open ms-2"></i>القائمة
                         </button>
                         <button class="btn btn-outline-primary category-btn" data-category="main-meals">
-                            <i class="fas fa-drumstick-bite me-2"></i>Main Meals
+                            <i class="fas fa-drumstick-bite ms-2"></i>الوجبات الرئيسية
                         </button>
                         <button class="btn btn-outline-primary category-btn" data-category="smoking-meals">
-                            <i class="fas fa-fire me-2"></i>Smoking Meals
+                            <i class="fas fa-fire ms-2"></i>الأطباق المدخنة
                         </button>
                         <button class="btn btn-outline-primary category-btn" data-category="desserts">
-                            <i class="fas fa-ice-cream me-2"></i>Desserts
+                            <i class="fas fa-ice-cream ms-2"></i>الحلويات
                         </button>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
             <!-- Menu Section -->
             <div class="menu-category" id="menu">
                 <h2 class="section-title text-center mb-5">
-                    <i class="fas fa-book-open me-3"></i>Restaurant Menu
+                    <i class="fas fa-book-open ms-3"></i>قائمة المطعم
                 </h2>
                 <div class="row justify-content-center" id="menu-container">
                     <!-- Menu cards will be dynamically inserted here -->
@@ -87,7 +87,7 @@
             <!-- Main Meals Section -->
             <div class="menu-category" id="main-meals" style="display: none;">
                 <h2 class="section-title text-center mb-5">
-                    <i class="fas fa-drumstick-bite me-3"></i>Main Meals
+                    <i class="fas fa-drumstick-bite ms-3"></i>الوجبات الرئيسية
                 </h2>
                 <div class="row" id="main-meals-container">
                     <!-- Main meal cards will be dynamically inserted here -->
@@ -97,7 +97,7 @@
             <!-- Smoking Meals Section -->
             <div class="menu-category" id="smoking-meals" style="display: none;">
                 <h2 class="section-title text-center mb-5">
-                    <i class="fas fa-fire me-3"></i>Smoking Meals
+                    <i class="fas fa-fire ms-3"></i>الأطباق المدخنة
                 </h2>
                 <div class="row" id="smoking-meals-container">
                     <!-- Smoking meal cards will be dynamically inserted here -->
@@ -107,7 +107,7 @@
             <!-- Desserts Section -->
             <div class="menu-category" id="desserts" style="display: none;">
                 <h2 class="section-title text-center mb-5">
-                    <i class="fas fa-ice-cream me-3"></i>Desserts
+                    <i class="fas fa-ice-cream ms-3"></i>الحلويات
                 </h2>
                 <div class="row" id="desserts-container">
                     <!-- Dessert cards will be dynamically inserted here -->
@@ -120,7 +120,7 @@
     <div id="cartSection" class="container mt-5">
         <div class="card shadow-lg">
             <div class="card-header">
-                <h4 class="mb-0"><i class="fas fa-shopping-cart me-2"></i>Your Order</h4>
+                <h4 class="mb-0"><i class="fas fa-shopping-cart ms-2"></i>طلبك</h4>
             </div>
             <div class="card-body p-4">
                 <div id="cartItems" class="mb-4">
@@ -131,8 +131,8 @@
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="cartDeliveryOption" onchange="updateCartTotal()">
                         <label class="form-check-label" for="cartDeliveryOption">
-                            <strong>Add Delivery Service (+$25)</strong>
-                            <small class="text-muted d-block">Check this if you want home delivery</small>
+                            <strong>إضافة خدمة التوصيل (+25 جنيه)</strong>
+                            <small class="text-muted d-block">اختر هذا إذا كنت تريد التوصيل للمنزل</small>
                         </label>
                     </div>
                     
@@ -140,7 +140,7 @@
                     <div class="form-check mt-2" id="locationCheckContainer" style="display: none;">
                         <input class="form-check-input" type="checkbox" id="useCurrentLocation">
                         <label class="form-check-label" for="useCurrentLocation">
-                            Use my current location for delivery
+                            استخدم موقعي الحالي للتوصيل
                         </label>
                     </div>
                 </div>
@@ -148,22 +148,22 @@
                 <!-- Cart Total with Delivery -->
                 <div class="cart-summary">
                     <div class="d-flex justify-content-between align-items-center mb-2">
-                        <span>Subtotal:</span>
-                        <span id="cartSubtotal">$0.00</span>
+                        <span id="cartSubtotal">0 جنيه</span>
+                        <span>المجموع الفرعي:</span>
                     </div>
                     <div class="d-flex justify-content-between align-items-center mb-2" id="cartDeliveryFeeRow" style="display: none;">
-                        <span>Delivery Fee:</span>
-                        <span>$25.00</span>
+                        <span>25 جنيه</span>
+                        <span>رسوم التوصيل:</span>
                     </div>
                     <div class="d-flex justify-content-between align-items-center border-top pt-3">
-                        <h5 class="mb-0">Total:</h5>
-                        <h5 class="mb-0 cart-total" id="cartTotal">$0.00</h5>
+                        <h5 class="mb-0 cart-total" id="cartTotal">0 جنيه</h5>
+                        <span>الإجمالي:</span>
                     </div>
                 </div>
                 
                 <div class="text-center mt-4">
                     <button class="btn btn-checkout btn-lg w-100" onclick="proceedToOrder()">
-                        Proceed to Order <i class="fas fa-arrow-right ms-2"></i>
+                        المتابعة للطلب <i class="fas fa-arrow-left me-2"></i>
                     </button>
                 </div>
             </div>
@@ -175,17 +175,17 @@
         <div class="container">
             <div class="card shadow-lg">
                 <div class="card-header bg-primary text-white">
-                    <h4 class="mb-0"><i class="fas fa-clipboard-list me-2"></i>Complete Your Order</h4>
+                    <h4 class="mb-0"><i class="fas fa-clipboard-list ms-2"></i>أكمل طلبك</h4>
                 </div>
                 <div class="card-body p-4">
                     <form id="orderForm">
                         <div class="row">
                             <div class="col-md-6 mb-3">
-                                <label for="customerName" class="form-label">Full Name *</label>
+                                <label for="customerName" class="form-label">الاسم الكامل *</label>
                                 <input type="text" class="form-control" id="customerName" required>
                             </div>
                             <div class="col-md-6 mb-3">
-                                <label for="customerPhone" class="form-label">Phone Number *</label>
+                                <label for="customerPhone" class="form-label">رقم الهاتف *</label>
                                 <input type="tel" class="form-control" id="customerPhone" required>
                             </div>
                         </div>
@@ -194,49 +194,49 @@
 
                         <!-- Additional Notes Section -->
                         <div class="notes-section mb-4">
-                            <h5><i class="fas fa-sticky-note me-2"></i>Additional Information</h5>
+                            <h5><i class="fas fa-sticky-note ms-2"></i>معلومات إضافية</h5>
                             <div class="mb-3">
-                                <label for="customerNotes" class="form-label">Special Instructions or Notes</label>
-                                <textarea class="form-control" id="customerNotes" rows="3" placeholder="Any special requests, dietary restrictions, or additional information..."></textarea>
+                                <label for="customerNotes" class="form-label">تعليمات خاصة أو ملاحظات</label>
+                                <textarea class="form-control" id="customerNotes" rows="3" placeholder="أي طلبات خاصة أو قيود غذائية أو معلومات إضافية..."></textarea>
                             </div>
                         </div>
 
                         <!-- Order Summary -->
                         <div class="order-summary mb-4 p-3 bg-light rounded">
                             <div class="d-flex justify-content-between align-items-center mb-2">
-                                <span>Subtotal:</span>
-                                <span id="orderSubtotal">$0.00</span>
+                                <span id="orderSubtotal">0 جنيه</span>
+                                <span>المجموع الفرعي:</span>
                             </div>
                             <div class="d-flex justify-content-between align-items-center mb-2" id="deliveryFeeRow" style="display: none;">
-                                <span>Delivery Fee:</span>
-                                <span id="deliveryFeeAmount">$25.00</span>
+                                <span id="deliveryFeeAmount">25 جنيه</span>
+                                <span>رسوم التوصيل:</span>
                             </div>
                             <div class="d-flex justify-content-between align-items-center border-top pt-2">
-                                <h5 class="mb-0">Total:</h5>
-                                <h5 class="mb-0 text-primary" id="orderTotal">$0.00</h5>
+                                <h5 class="mb-0 text-primary" id="orderTotal">0 جنيه</h5>
+                                <span>الإجمالي:</span>
                             </div>
                         </div>
 
                         <!-- Payment Method -->
                         <div class="mb-4">
-                            <h5><i class="fas fa-credit-card me-2"></i>Payment Method *</h5>
+                            <h5><i class="fas fa-credit-card ms-2"></i>طريقة الدفع *</h5>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="paymentMethod" id="payInHand" value="Pay in Hand" required checked>
                                 <label class="form-check-label" for="payInHand">
-                                    Pay in Hand (Cash on Delivery)
+                                    الدفع نقداً (عند الاستلام)
                                 </label>
                             </div>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="paymentMethod" id="instapay" value="Instapay" required>
                                 <label class="form-check-label" for="instapay">
-                                    Instapay Transfer
+                                    تحويل إنستاباي
                                 </label>
                             </div>
                         </div>
 
                         <div class="text-center">
                             <button type="submit" class="btn whatsapp-btn btn-lg w-100">
-                                <i class="fab fa-whatsapp me-2"></i>Order via WhatsApp
+                                <i class="fab fa-whatsapp ms-2"></i>اطلب عبر الواتساب
                             </button>
                         </div>
                     </form>
@@ -255,7 +255,7 @@
     <div id="fullscreenModal" class="fullscreen-modal">
         <span class="modal-close" onclick="closeFullscreen()">&times;</span>
         <button class="modal-download" onclick="downloadCurrentImage()">
-            <i class="fas fa-download me-2"></i>Download
+            <i class="fas fa-download ms-2"></i>تحميل
         </button>
         <div class="fullscreen-modal-content">
             <img id="fullscreenImage" src="" alt="Menu">
