--- a/index.html
+++ b/index.html
@@ -13,18 +13,15 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
         <div class="container">
             <a class="navbar-brand fw-bold" href="#">
-                <i class="fas fa-utensils ms-2 text-primary"></i>
-                <span id="site-title">جنة الطعم</span>
+                <span id="site-title">مطعم الحاتي السوري</span>
+                <i class="fas fa-utensils me-2 text-primary"></i>
             </a>
             <div class="d-flex align-items-center">
-                <button class="btn btn-outline-primary position-relative ms-3" onclick="toggleCart()">
+                <button class="btn btn-outline-primary position-relative" onclick="toggleCart()">
                     <i class="fas fa-shopping-cart"></i>
-                    السلة
+                    تفاصيل طلبك
                     <span id="cart-count" class="badge bg-danger position-absolute top-0 start-100 translate-middle" style="display: none;">0</span>
                 </button>
-                <a href="#" class="btn btn-outline-success ms-3" id="whatsappNavButton" title="اطلب عبر الواتساب">
-                    <i class="fab fa-whatsapp ms-1"></i> واتساب
-                </a>
             </div>
         </div>
     </nav>
@@ -35,13 +32,21 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-8">
-                    <h1 class="display-3 fw-bolder mb-4">أهلاً بكم في جنة الطعم</h1>
+                    <h1 class="display-3 fw-bolder mb-4">أهلاً بكم في مطعم الحاتي السوري</h1>
                     <p class="lead fs-4 mb-5 opacity-75">اكتشفوا قائمة طعامنا المميزة التي تضم أشهى الوجبات الرئيسية والأطباق المدخنة والحلويات اللذيذة.</p>
                 </div>
             </div>
-            <div class="sale-badge-container text-center mt-4">
-                 <div class="sale-badge d-inline-block">
-                    <i class="fas fa-fire ms-2"></i> عرض الشيف المميز: اطلب 3 واحصل على 1 مجاناً!
+            <div class="hero-contact-buttons text-center mt-4">
+                <div class="d-flex justify-content-center flex-wrap gap-3">
+                    <a href="#" class="btn btn-hero btn-outline-success" id="whatsappHeroButton" title="تواصل معنا عبر الواتساب">
+                        <i class="fab fa-whatsapp ms-2"></i> تواصل عبر الواتساب
+                    </a>
+                    <a href="tel:+201157299077" class="btn btn-hero btn-outline-light" id="callHeroButton" title="اتصل بنا مباشرة">
+                        <i class="fas fa-phone ms-2"></i> اتصل بنا مباشرة
+                    </a>
+                    <a href="https://www.facebook.com/profile.php?id=100063558663777" target="_blank" class="btn btn-hero btn-outline-info" id="facebookHeroButton" title="تابعونا على الفيسبوك">
+                        <i class="fab fa-facebook-f ms-2"></i> تابعنا على فيسبوك
+                    </a>
                 </div>
             </div>
         </div>
@@ -53,17 +58,20 @@
             <div class="row justify-content-center">
                 <div class="col-12">
                     <div class="d-flex justify-content-center flex-wrap gap-3">
-                        <button class="btn btn-outline-primary category-btn active" data-category="menu">
-                            <i class="fas fa-book-open ms-2"></i>القائمة
+                        <button class="btn btn-outline-primary category-btn" data-category="appetizers">
+                            <i class="fas fa-seedling ms-2"></i>الإضافات
                         </button>
-                        <button class="btn btn-outline-primary category-btn" data-category="main-meals">
-                            <i class="fas fa-drumstick-bite ms-2"></i>الوجبات الرئيسية
+                        <button class="btn btn-outline-primary category-btn" data-category="desserts">
+                            <i class="fas fa-ice-cream ms-2"></i>الحلويات
                         </button>
                         <button class="btn btn-outline-primary category-btn" data-category="smoking-meals">
                             <i class="fas fa-fire ms-2"></i>الأطباق المدخنة
                         </button>
-                        <button class="btn btn-outline-primary category-btn" data-category="desserts">
-                            <i class="fas fa-ice-cream ms-2"></i>الحلويات
+                        <button class="btn btn-outline-primary category-btn" data-category="main-meals">
+                            <i class="fas fa-drumstick-bite ms-2"></i>الوجبات الرئيسية
+                        </button>
+                        <button class="btn btn-outline-primary category-btn active" data-category="menu">
+                            <i class="fas fa-book-open ms-2"></i>القائمة
                         </button>
                     </div>
                 </div>
@@ -74,23 +82,23 @@
     <!-- Menu Section -->
     <section class="menu-section py-5">
         <div class="container">
-            <!-- Menu Section -->
-            <div class="menu-category" id="menu">
+            <!-- Appetizers Section (Rightmost) -->
+            <div class="menu-category" id="appetizers" style="display: none;">
                 <h2 class="section-title text-center mb-5">
-                    <i class="fas fa-book-open ms-3"></i>قائمة المطعم
+                    <i class="fas fa-seedling ms-3"></i>الإضافات والمقبلات
                 </h2>
-                <div class="row justify-content-center" id="menu-container">
-                    <!-- Menu cards will be dynamically inserted here -->
+                <div class="row" id="appetizers-container">
+                    <!-- Appetizer cards will be dynamically inserted here -->
                 </div>
             </div>
 
-            <!-- Main Meals Section -->
-            <div class="menu-category" id="main-meals" style="display: none;">
+            <!-- Desserts Section -->
+            <div class="menu-category" id="desserts" style="display: none;">
                 <h2 class="section-title text-center mb-5">
-                    <i class="fas fa-drumstick-bite ms-3"></i>الوجبات الرئيسية
+                    <i class="fas fa-ice-cream ms-3"></i>الحلويات
                 </h2>
-                <div class="row" id="main-meals-container">
-                    <!-- Main meal cards will be dynamically inserted here -->
+                <div class="row" id="desserts-container">
+                    <!-- Dessert cards will be dynamically inserted here -->
                 </div>
             </div>
 
@@ -104,13 +112,23 @@
                 </div>
             </div>
 
-            <!-- Desserts Section -->
-            <div class="menu-category" id="desserts" style="display: none;">
+            <!-- Main Meals Section -->
+            <div class="menu-category" id="main-meals" style="display: none;">
                 <h2 class="section-title text-center mb-5">
-                    <i class="fas fa-ice-cream ms-3"></i>الحلويات
+                    <i class="fas fa-drumstick-bite ms-3"></i>الوجبات الرئيسية
                 </h2>
-                <div class="row" id="desserts-container">
-                    <!-- Dessert cards will be dynamically inserted here -->
+                <div class="row" id="main-meals-container">
+                    <!-- Main meal cards will be dynamically inserted here -->
+                </div>
+            </div>
+
+            <!-- Menu Section (Leftmost) -->
+            <div class="menu-category" id="menu">
+                <h2 class="section-title text-center mb-5">
+                    <i class="fas fa-book-open ms-3"></i>قائمة المطعم
+                </h2>
+                <div class="row justify-content-center" id="menu-container">
+                    <!-- Menu cards will be dynamically inserted here -->
                 </div>
             </div>
         </div>
@@ -182,11 +200,15 @@
                         <div class="row">
                             <div class="col-md-6 mb-3">
                                 <label for="customerName" class="form-label">الاسم الكامل *</label>
-                                <input type="text" class="form-control" id="customerName" required>
+                                <input type="text" class="form-control" id="customerName" required 
+                                       placeholder="أدخل اسمك الكامل" 
+                                       title="يرجى ملء هذا الحقل">
                             </div>
                             <div class="col-md-6 mb-3">
                                 <label for="customerPhone" class="form-label">رقم الهاتف *</label>
-                                <input type="tel" class="form-control" id="customerPhone" required>
+                                <input type="tel" class="form-control" id="customerPhone" required 
+                                       placeholder="أدخل رقم هاتفك" 
+                                       title="يرجى ملء هذا الحقل">
                             </div>
                         </div>
 
